syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";

package example;

option go_package = ".;pb";

service Types {
    rpc Echo (Sound) returns (Sound);
}

message Sound {
    double double = 1;
    float float = 2;
    int32 int32 = 3;
    int64 int64 = 4;
    uint32 uint32 = 5;
    uint64 uint64 = 6;
    sint32 sint32 = 7;
    sint64 sint64 = 8;
    fixed32 fixed32 = 9;
    fixed64 fixed64 = 10;
    sfixed32 sfixed32 = 11;
    sfixed64 sfixed64 = 12;
    bool bool = 13;
    string string = 14;
    bytes bytes = 15;
    NestedEnum nested_enum = 16;
    GlobalEnum global_enum = 17;
    NestedMessage nested_msg = 18;
    GlobalMessage global_msg = 19;

    repeated double list_double = 21;
    repeated float list_float = 22;
    repeated int32 list_int32 = 23;
    repeated int64 list_int64 = 24;
    repeated uint32 list_uint32 = 25;
    repeated uint64 list_uint64 = 26;
    repeated sint32 list_sint32 = 27;
    repeated sint64 list_sint64 = 28;
    repeated fixed32 list_fixed32 = 29;
    repeated fixed64 list_fixed64 = 30;
    repeated sfixed32 list_sfixed32 = 31;
    repeated sfixed64 list_sfixed64 = 32;
    repeated bool list_bool = 33;
    repeated string list_string = 34;
    repeated bytes list_bytes = 35;
    repeated NestedEnum list_nested_enum = 36;
    repeated GlobalEnum list_global_enum = 37;
    repeated NestedMessage list_nested_msg = 38;
    repeated GlobalMessage list_global_msg = 39;

    map<string, double> map_string_double = 41;
    map<string, float> map_string_float = 42;
    map<string, int32> map_string_int32 = 43;
    map<string, int64> map_string_int64 = 44;
    map<string, uint32> map_string_uint32 = 45;
    map<string, uint64> map_string_uint64 = 46;
    map<string, sint32> map_string_sint32 = 47;
    map<string, sint64> map_string_sint64 = 48;
    map<string, fixed32> map_string_fixed32 = 49;
    map<string, fixed64> map_string_fixed64 = 50;
    map<string, sfixed32> map_string_sfixed32 = 51;
    map<string, sfixed64> map_string_sfixed64 = 52;
    map<string, bool> map_string_bool = 53;
    map<string, string> map_string_string = 54;
    map<string, bytes> map_string_bytes = 55;
    map<string, NestedEnum> map_string_nested_enum = 56;
    map<string, GlobalEnum> map_string_global_enum = 57;
    map<string, NestedMessage> map_string_nested_msg = 58;
    map<string, GlobalMessage> map_string_global_msg = 59;

    map<int32, string> map_int32_string = 61;
    map<int64, string> map_int64_string = 62;
    map<uint32, string> map_uint32_string = 63;
    map<uint64, string> map_uint64_string = 64;
    map<sint32, string> map_sint32_string = 65;
    map<sint64, string> map_sint64_string = 66;
    map<fixed32, string> map_fixed32_string = 67;
    map<fixed64, string> map_fixed64_string = 68;
    map<sfixed32, string> map_sfixed32_string = 69;
    map<sfixed64, string> map_sfixed64_string = 70;
    map<bool, string> map_bool_string = 71;

    google.protobuf.Timestamp timestamp = 81;
    google.protobuf.Duration duration = 82;
    google.protobuf.BoolValue wrapper_bool = 83;
    google.protobuf.BytesValue wrapper_bytes = 84;
    google.protobuf.DoubleValue wrapper_double = 85;
    google.protobuf.FloatValue wrapper_float = 86;
    google.protobuf.Int32Value wrapper_int32 = 87;
    google.protobuf.Int64Value wrapper_int64 = 88;
    google.protobuf.StringValue wrapper_string = 89;
    google.protobuf.UInt32Value wrapper_uint32 = 90;
    google.protobuf.UInt64Value wrapper_uint64 = 91;

    repeated google.protobuf.Timestamp list_timestamp = 101;
    repeated google.protobuf.Duration list_duration = 102;
    repeated google.protobuf.BoolValue list_wrapper_bool = 103;
    repeated google.protobuf.BytesValue list_wrapper_bytes = 104;
    repeated google.protobuf.DoubleValue list_wrapper_double = 105;
    repeated google.protobuf.FloatValue list_wrapper_float = 106;
    repeated google.protobuf.Int32Value list_wrapper_int32 = 107;
    repeated google.protobuf.Int64Value list_wrapper_int64 = 108;
    repeated google.protobuf.StringValue list_wrapper_string = 109;
    repeated google.protobuf.UInt32Value list_wrapper_uint32 = 110;
    repeated google.protobuf.UInt64Value list_wrapper_uint64 = 111;

    map<string, google.protobuf.Timestamp> map_string_timestamp = 121;
    map<string, google.protobuf.Duration> map_string_duration = 122;
    map<string, google.protobuf.BoolValue> map_string_wrapper_bool = 123;
    map<string, google.protobuf.BytesValue> map_string_wrapper_bytes = 124;
    map<string, google.protobuf.DoubleValue> map_string_wrapper_double = 125;
    map<string, google.protobuf.FloatValue> map_string_wrapper_float = 126;
    map<string, google.protobuf.Int32Value> map_string_wrapper_int32 = 127;
    map<string, google.protobuf.Int64Value> map_string_wrapper_int64 = 128;
    map<string, google.protobuf.StringValue> map_string_wrapper_string = 129;
    map<string, google.protobuf.UInt32Value> map_string_wrapper_uint32 = 130;
    map<string, google.protobuf.UInt64Value> map_string_wrapper_uint64 = 131;

    enum NestedEnum {
        JAN = 0;
        FEB = 1;
        MAR = 2;
    }

    message NestedMessage {
        string value = 1;
    }
}

enum GlobalEnum {
    MON = 0;
    TUE = 1;
    WED = 2;
}

message GlobalMessage {
    string value = 1;
}
